# hpx-exercises

./: CMakeLists.txt  README.md  clone-build-hpx-daint.sh  clone-build-hpx-docker.sh  hpx-daint-env.sh  hpx-workshop.html  run-hpx-dev-docker.sh  run-hpx-dev-shifter.sh  setup-exercises.sh
exercises/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  exercise7.cpp  exercise8.cpp  exercise9.cpp
solutions/: solution1.cpp  solution2.cpp  solution3.cpp  solution4.cpp  solution5.cpp  solution6.cpp  solution7.cpp  solution8.cpp
